--- a/client/scss/user.scss
+++ b/client/scss/user.scss
@@ -167,8 +167,8 @@
 }
 
 .small-avatar {
-  width: 50px;
-  height: 50px;
+  max-width: 50px;
+  max-height: 50px;
 }
 
 .user-thumbs .user-thumb {
